--- a/starter-page.html
+++ b/starter-page.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../IMG_20241118_163853 (2).png" rel="icon">
+  <link href="../IMG_20241118_163853 (2).png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Arsha</h1>
+        <h1 class="sitename">Quantumquill</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
