--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link  rel="icon" sizes="32x32" href="../IMG_20241118_163853 (2).png">
-  <link  rel="icon"  sizes="32x32"  href="../IMG_20241118_163853 (2).png">
+  <!-- <link  rel="icon" sizes="32x32" href="../IMG_20241118_163853 (2).png">
+  <link  rel="icon"  sizes="32x32"  href="../IMG_20241118_163853 (2).png"> -->
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
