--- a/starter-page.html
+++ b/starter-page.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - Arsha Bootstrap Template</title>
+  <title>Quantumquill</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <!-- Favicons -->
-  <link href="../IMG_20241118_163853 (2).png" rel="icon">
+  Favicons -->
+ <link href="../IMG_20241118_163853 (2).png" rel="icon">
   <link href="../IMG_20241118_163853 (2).png" rel="apple-touch-icon">
 
   <!-- Fonts -->
