--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/banner-2.png" />
+        <img src="assets/img/logo-31-removebg-preview.png" />
       </a>
 
       <nav id="navmenu" class="navmenu">
