--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- Favicons -->
 
-  <link  rel="icon"   href="assets/img/vertopal.com_globe.png">
-  <link  rel="apple-touch-icon"  href="assets/img/vertopal.com_globe.png">
+  <link  rel="icon"   href="assets/img/globe_png-remove.png">
+  <link  rel="apple-touch-icon"  href="assets/img/globe_png-remove.png">
 
 
   <!-- Fonts -->
@@ -359,13 +359,10 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-cloud-drizzle"></i></div>
-              <h4><a href="" class="stretched-link">Cloud Computing </a></h4>
+              <div class="icon"><i class="bi bi-people"></i></div>
+              <h4><a href="" class="stretched-link">Financial Accounting</a></h4>
               <p>
-                Cloud Computing Cloud computing has changed the way organizations host small to high scale applications.
-                 We are specialized in different cloud computing streams, cloud storages and cloud services. 
-                 We are experts in delivering cloud services over the internet, which includes multi-cloud implementation, 
-                 application development and etc.
+                Financial accounting is a process of recording, summarizing, and reporting a business's financial transactions. It focuses on preparing financial statements, including the income statement, balance sheet, and cash flow statement. The information is intended for external stakeholders such as investors, creditors, and regulators.
                 </p>
             </div>
           </div><!-- End Service Item -->
@@ -381,10 +378,10 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
-              <div class="icon"><i class="bi bi-people"></i>
+              <div class="icon"><i class="bi bi-box-seam"></i>
               </div>
-              <h4><a href="" class="stretched-link">Product Management</a></h4>
-              <p>We craft innovative solutions that empower businesses to thrive in the digital age. Our comprehensive product management services ensure seamless transitions from concept to execution, blending creativity with strategic insights. From ideation to delivery, QuantumQuill transforms ideas into impactful realities, setting a new standard for excellence in every project we undertake.
+              <h4><a href="" class="stretched-link">Inventory System</a></h4>
+              <p>An inventory system manages the tracking, ordering, and storage of a company's stock. It ensures optimal inventory levels to meet customer demand while minimizing costs. Systems can be perpetual (real-time updates) or periodic (inventory checked at intervals). Key components include inventory tracking, reorder points, and inventory valuation methods like FIFO, LIFO, or weighted average.
               </p>
             </div>
           </div><!-- End Service Item -->
@@ -396,9 +393,9 @@
   
             <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
               <div class="service-item position-relative">
-                <div class="icon"><i class="bi bi-palette"></i></div>
-                <h4><a href="" class="stretched-link">Software Designing</a></h4>
-                <p>At QuantumQuill, our Software Designing service focuses on crafting intuitive, efficient, and innovative software solutions that align with our clients' unique needs. We combine user-centric design principles with cutting-edge technology to deliver software that is not only functional but also visually appealing and easy to use.
+                <div class="icon"><i class="bi bi-wallet2"></i></div>
+                <h4><a href="" class="stretched-link">Billing Solutions</a></h4>
+                <p>Billing Solutions streamline your payment processes with precision and ease. Automate invoicing, manage subscriptions, and track transactions in real time, ensuring seamless financial operations. Designed for businesses of all sizes, our solutions integrate effortlessly with your existing systems.
                 </p>
               </div>
             </div><!-- End Service Item -->
@@ -415,9 +412,9 @@
   
             <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
               <div class="service-item position-relative">
-                <div class="icon"><i class="bi bi-briefcase"></i></div>
-                <h4><a href="" class="stretched-link">IT Consultancy and Subcontracting</a></h4>
-                <p>IT Consultancy and subcontracting are integral components of the IT-enabled services (ITES) sector, aimed at providing businesses with specialized guidance and support for leveraging technology effectively. These services are tailored to help organizations navigate the complexities of digital transformation, optimize their technology usage, and achieve strategic goals. Below, these concepts are elaborated comprehensively:
+                <div class="icon"><i class="bi bi-laptop"></i></div>
+                <h4><a href="" class="stretched-link">ERP Solutions</a></h4>
+                <p>Streamline your business operations with our robust ERP solutions, designed to integrate and automate core processes such as finance, supply chain, human resources, and inventory management. Our tailored systems improve efficiency, ensure data accuracy, and enhance decision-making with real-time analytics.
 
                 </p>
               </div>
@@ -427,8 +424,8 @@
               <div class="service-item position-relative">
                 <div class="icon"><i class="bi bi-file-code"></i>
                 </div>
-                <h4><a href="" class="stretched-link">Software Development</a></h4>
-                <p>Software development is the process of designing, building, and maintaining software applications that are tailored to meet the specific needs of a business or individual. Unlike off-the-shelf software, which is designed for general use, custom software is built with a unique set of requirements and goals in mind, making it a powerful tool for organizations seeking to differentiate themselves in competitive markets.
+                <h4><a href="" class="stretched-link">HR and Payroll Systems</a></h4>
+                <p>HR and Payroll Systems streamline employee management and payroll processes, ensuring efficiency and compliance. These systems handle recruitment, onboarding, attendance, performance reviews, and salary processing seamlessly. They provide automated tax calculations, benefits administration, and real-time reporting.
                 </p>
               </div>
             </div><!-- End Service Item -->
@@ -1110,13 +1107,13 @@
           <h4>Our Services</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">UX/UI Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#services">Cloud Computing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#services">Financial Accounting</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#services">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#services">Software Designing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#services">Inventory System</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#services">Billing Solutions</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">IT-Enabled Services (ITES)</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#services">IT Consultancy and Subcontracting</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#services">Software Development</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#services">ERP Solutions</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#services">HR and Payroll Systems</a></li>
           </ul>
         </div>
 
