--- a/index.html
+++ b/index.html
@@ -983,8 +983,12 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>H.NO: 2-3-116/9/A, 3rd floor, Sai Nagar Road No.1, Alkapuri
-                    Nagole, Hyderabad-500068</p>
+                  <p><a 
+                    href="https://www.google.com/maps/search/?api=1&query=H.NO: 2-3-116/9/A, Sai Nagar Road No.1, Alkapuri Nagole, Hyderabad-500068" 
+                    target="_blank"
+                  >
+                    H.NO: 2-3-116/9/A, 3rd floor, Sai Nagar Road No.1, Alkapuri Nagole, Hyderabad-500068
+                  </a></p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -992,7 +996,9 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>914035761249</p>
+                  <p>
+                    <a href="tel:914035761249">914035761249</a>
+                  </p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -1000,11 +1006,13 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>quantumquillinfotech@gmail.com</p>
+                  <p>
+                    <a href="mailto:quantumquillinfotech@gmail.com">quantumquillinfotech@gmail.com</a>
+                  </p>
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3808.0198820920996!2d78.55531247551194!3d17.36277628352024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99913a9e765b%3A0x7fc01ae28a5be2b2!2sAadhya%20Properties!5e0!3m2!1sen!2sin!4v1731751835363!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1890.521854050414!2d78.55658588919111!3d17.362770842223146!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb990050a4ef67%3A0x5e19eb73e0170ff1!2sQuantum%20Quill%20Infotech%20Pvt%20Ltd!5e1!3m2!1sen!2sin!4v1732684176691!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
