--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
           <p>reachout us</p>
           <div class="social-links d-flex">
             <a href="https://x.com/Quantumqui48511"><i class="bi bi-twitter-x"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=61568344843489"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=61569933950456&mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/quantumquill_infotech/"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/in/quantumquill-infotech-a00682338/"><i class="bi bi-linkedin"></i></a>
           </div>
